# StableMatching-SMFQ_branch

./: CMakeLists.txt  README.md  main.cc  mtp_test_devcpp.cpp  ongomma.txt  readme2.md  runcode  test.cc
include/: Convert_HR_to_HR2LQ.h  DirectApproachHR2LQ.h  Exact_Exponential_SMFQ.h  GraphReader.h  HHeuristicHRLQ.h  LpApproxSMFQ.h  MaximalEnvyfreeHRLQ.h  NProposingMatching.h  Popular.h  PreferenceList.h  RHeuristicHRLQ.h  SEAPopularHRLQ.h  StableMarriage.h  TDefs.h  Utils.h  YokoiEnvyfreeHRLQ.h
input/10k_50_10_many-to-one/: input0.txt  input1.txt  input2.txt  input3.txt  input4.txt  input5.txt  input6.txt  input7.txt  input8.txt  input9.txt
input/10k_50_15_many-to-one/: input1.txt  input2.txt  input3.txt  input4.txt  input5.txt
input/10k_50_20_many-to-one/: input0.txt  input1.txt  input10.txt  input2.txt  input3.txt  input4.txt  input5.txt  input6.txt  input7.txt  input8.txt  input9.txt
lib/: CMakeLists.txt  Graph.cc  GraphReader.cc  NProposingMatching.cc  PreferenceList.cc  StableMarriage.cc  Utils.cc
resources/: TC0.txt  TC8.txt  check2.txt  dum.txt  dumdum3.txt  dumdumdum2.txt  exa3.txt  exa4.txt  example1.txt  example2.txt  example3.txt  example4.txt  one2one.txt  one2one2.txt  one2oneout.txt  osig1.txt  our_input.txt  our_output.txt  our_output1.txt  out1.txt  out2.txt  outTC0.txt  outone2one.txt  outone2one4.txt  outone2one7.txt  outone2one8.txt  outone2one9.txt  outout.txt  outout1.txt  outout10.txt  outout11.txt  outout2.txt  outout4.txt  outout5.txt  outout6.txt  outout8.txt  outout9.txt  output1.txt  output10.txt  output12.txt  (+22 more)
(+117 files in other folders)
